--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -174,6 +174,7 @@ else{
               try{
                   // REMOVE THIS!!!
                   if(profile.contains("Debug")){
+                    print("FALLANDO APOSTA")
                     throw new Exception("I made this fail, because I'm evil")
                   }
 
