--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -31,7 +31,7 @@ def InstallCore(){
 }
 
 
-def RunCore(command){
+def RunCore(command, credential){
     echo "Run c3i core"
     withCredentials([usernameColonPassword(credentialsId: credential, variable: 'USER_PASS')]) {
        Run(command)
@@ -91,7 +91,7 @@ if(current_branch == "master"){
             InstallCore()
             withEnv(["COMMIT_MESSAGE=${commit_message}"]){ // I'm not able to pass quoted message without failing...
                def command = $/merge_pr ${arti_instance} $$USER_PASS/$
-               RunCore(command)
+               RunCore(command, credential)
             }
         }
     }
@@ -108,12 +108,13 @@ else{
           repo_name = "c3i_${env.BRANCH_NAME}_${commit_short}".toString()
           echo "${env.BRANCH_NAME}"
           def basedir = pwd()
-          RunCore("calculate_builds ${basedir} ${json_file_path} ${repo_name}")
+          def command = $/calculate_builds ${arti_instance} $$USER_PASS ${basedir} ${json_file_path} ${repo_name}/$
+          RunCore(command, credential)
           the_json = readJSON file: json_file_path
        }
        stage("Create Build Artifactory"){
-          def command = $/init_repo ${arti_instance} ${repo_name} ${c3i_build_number} $$USER_PASS/$
-          RunCore(command)
+          def command = $/init_repo ${arti_instance} $$USER_PASS ${repo_name} ${c3i_build_number}/$
+          RunCore(command, credential)
        }
     }
 
@@ -164,11 +165,11 @@ else{
                         }
                       }
                       def command = $/ set_success ${arti_instance} $$USER_PASS ${repo_name} ${profile_id}/$
-                      RunCore(command)
+                      RunCore(command, credential)
                   }
                   catch(error){
                      def command = $/ set_failed ${arti_instance} $$USER_PASS ${repo_name} ${profile_id}/$
-                     RunCore(command)
+                     RunCore(command, credential)
 
                      throw error
                   }
