--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -22,31 +22,23 @@ def Run(command, sudo=false, returnStatus=false){
     return ret
 }
 
-def pipInstall(command){
-    withPythonEnv(env.BUILD_NUMBER){
-        Run("pip install ${command}")
-    }
-}
-
 
 def InstallCore(){
    echo "Install c3i core"
    dir(".c3_core") {
        git branch: 'master', url: "https://github.com/lasote/c3i_core.git"
        def commit = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
-       pipInstall("-e .")
+       Run("pip install -e . --user")
    }
 }
 
 
 def RunCore(command, arti_instance, credential){
     echo "Run c3i core"
-    withPythonEnv(${env.BUILD_NUMBER}){
-        withEnv(["ARTIFACTORY_URL=${arti_instance}"]){
-            withCredentials([usernameColonPassword(credentialsId: credential,
-                                                   variable: 'ARTIFACTORY_CREDENTIALS')]) {
-               Run(command)
-            }
+    withEnv(["ARTIFACTORY_URL=${arti_instance}"]){
+        withCredentials([usernameColonPassword(credentialsId: credential,
+                                               variable: 'ARTIFACTORY_CREDENTIALS')]) {
+           Run(command)
         }
     }
 }
@@ -54,7 +46,7 @@ def RunCore(command, arti_instance, credential){
 
 
 def Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name){
-     pipInstall("conan --upgrade")
+     Run("pip install conan --upgrade --user")
      echo "BUILD FOLDER: ${build_folder}"
      echo "REPOSITORY: ${repo_name}"
      dir(build_folder){
