--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -93,7 +93,7 @@ def Process(build_folder, commit, url, profile, ref, arti_instance, credential, 
 if(current_branch == "master"){
     node("Linux"){
         stage("Merge PR packages"){
-            sh "pip install virtualenv --user"
+            sh "pip install virtualenv"
             checkout scm
             def commit_message = sh(returnStdout: true, script: 'git show -s --format="format:%s"').trim()
             echo "Commit message: ${commit_message}"
