--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -27,7 +27,7 @@ def InstallCore(){
    echo "Install c3i core"
    dir(".c3_core") {
        git branch: 'master', url: "https://github.com/lasote/c3i_core.git"
-       withPythonEnv("python"){
+       withPythonEnv("LinuxPython"){
             Run("pip install -e .")
        }
    }
