--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -152,7 +152,7 @@ else{
          builders["${oss} - Stage ${gix} - Build ${cdx}"] = {
             node(oss) {
                 stage("${oss} - Provision"){
-                    Run("pip install virtualenv")
+                    Run("python3 -m pip install virtualenv")
                 }
                 stage("${oss} - Stage ${gix} - Build ${cdx}"){
                   echo ref
