--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -66,7 +66,7 @@ def RunCore(command, arti_instance, credential){
 
 
 def Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name){
-     Run("pip install conan --upgrade --user")
+     Run("pip3 install conan --upgrade --user")
      echo "BUILD FOLDER: ${build_folder}"
      echo "REPOSITORY: ${repo_name}"
      dir(build_folder){
