--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -68,7 +68,8 @@ def RunCore(command, arti_instance, credential){
 def Process(build_folder, commit, url, profile, ref, arti_instance, credential, repo_name){
      Run("pip3 install conan --upgrade --user")
      echo "BUILD FOLDER: ${build_folder}"
-     echo "REPOSITORY: ${repo_name}"
+     echo "ARTIFACTORY: ${repo_name}"
+     echo "REPOSITORY: ${url}"
      dir(build_folder){
         if(!isUnix()){
            Run("git config --global core.autocrlf false")
