Use pip package

--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,6 +1,7 @@
 def arti_instance = "https://conan.jfrog.io/conan"
 def credential = "c3i_on_artifactory"
 def artifactory_name = "ArtifactoryConan"
+def pypi_repo = "https://conan.jfrog.io/conan/api/pypi/virtual-conan-pypi/simple"
 
 def win_tmp_path = "C:/J/c3ipr"
 def json_file_path = 'c3i_configs.json'
@@ -42,9 +43,8 @@ def getPythonName(){
 def InstallCore(){
    echo "Install c3i core"
    dir(".c3_core") {
-       git branch: 'master', url: "https://github.com/lasote/c3i_core.git", credentialsId: "GHCLONEPRIVATE"
        withPythonEnv(getPythonName()){
-            Run("pip install -e .")
+            Run("pip install c3i-core --index-url=${pypi_repo} --update")
        }
    }
 }
